--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -137,7 +137,7 @@ main {
     a {
         display: block;
         background-color: $accentColor;
-        color: $secondaryColor;
+        color: white;
         width: 50%;
         border-radius:4px;
         margin: 1rem auto;
